@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-07-10T01:34:37Z",
-  "count_outdated" : 4086,
-  "uniques_outdated" : 726,
+  "timestamp" : "2024-07-11T01:35:02Z",
+  "count_outdated" : 4089,
+  "uniques_outdated" : 728,
   "count" : 4155,
   "uniques" : 741,
   "views" : [
-    {
-      "timestamp": "2024-06-26T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-06-28T00:00:00Z",
       "count": 13,
