@@ -1,12 +1,7 @@
 {
-  "count": 69,
-  "uniques": 14,
+  "count": 66,
+  "uniques": 12,
   "views": [
-    {
-      "timestamp": "2024-06-26T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-06-28T00:00:00Z",
       "count": 13,
